<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_nav" app:startDestination="@id/todayFragment"><fragment android:id="@+id/todayFragment" android:name="io.github.matosoe.controlehoras.ui.today.TodayFragment" android:label="@string/nav_today"/><fragment android:id="@+id/goalsFragment" android:name="io.github.matosoe.controlehoras.ui.goals.GoalsFragment" android:label="@string/nav_goals"/><fragment android:id="@+id/dailyFragment" android:name="io.github.matosoe.controlehoras.ui.daily.DailyFragment" android:label="@string/nav_daily"/><fragment android:id="@+id/weeklyFragment" android:name="io.github.matosoe.controlehoras.ui.PlaceholderFragment" android:label="@string/nav_weekly"/><fragment android:id="@+id/exportFragment" android:name="io.github.matosoe.controlehoras.ui.PlaceholderFragment" android:label="@string/nav_export"/><fragment android:id="@+id/settingsFragment" android:name="io.github.matosoe.controlehoras.ui.PlaceholderFragment" android:label="@string/nav_settings"/></navigation>
