<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/category" />
    <Spinner android:id="@+id/entry_category_input" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/start" />
    <Button android:id="@+id/entry_start_input" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/end" />
    <Button android:id="@+id/entry_end_input" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/note_optional" />
    <EditText android:id="@+id/entry_note_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="top" android:inputType="textCapSentences|textMultiLine" android:maxLines="4" />
</LinearLayout>
